--- a/force-app/main/default/classes/Outbound Integration/Tests/StripeCustomerTriggerTest.cls
+++ b/force-app/main/default/classes/Outbound Integration/Tests/StripeCustomerTriggerTest.cls
@@ -82,4 +82,76 @@ private class StripeCustomerTriggerTest {
       'Response body should contain error message for invalid email'
     );
   }
+
+  /* description: Test for successful update of a Stripe customer.
+   * This test verifies that an existing customer can be updated successfully and the
+   * Stripe_Customer_ID__c field remains unchanged.
+   */
+  @isTest
+  static void updateCustomerSuccess() {
+    // Create Test Data
+    Stripe_Customer__c customer = StripeTestDataFactory.createStripeCustomer();
+    TriggerBypass.bypassStripeCustomer = true;
+    customer.Stripe_Customer_ID__c = 'cus_123456';
+    insert customer;
+    TriggerBypass.bypassStripeCustomer = false;
+    // Set Mock
+    StripeMockHttpResponse mockResponse = StripeMockHttpResponse.createSuccessCustomerUpdateResponse();
+    Test.setMock(HttpCalloutMock.class, mockResponse);
+    Test.startTest();
+    customer.Name__c = 'Test Customer Update';
+    update customer;
+    Test.stopTest();
+    // Retrieve the updated customer
+    Stripe_Customer__c updatedCustomer = [
+      SELECT Id, Stripe_Customer_ID__c, Name__c
+      FROM Stripe_Customer__c
+      WHERE Id = :customer.Id
+      LIMIT 1
+    ];
+    // Assertions to verify customer was updated successfully
+    Assert.areEqual(mockResponse.statusCode, 200, 'Status code should be 200');
+    Assert.areEqual(mockResponse.status, 'OK', 'Response status should be OK');
+    Assert.isNotNull(mockResponse.body, 'Response body should not be null');
+    Assert.areEqual(
+      updatedCustomer.Name__c,
+      'Test Customer Update',
+      'Updated customer name should match the new name'
+    );
+  }
+
+  static void updateCustomerFailure() {
+    Boolean exceptionThrown = false;
+    // Create Test Data
+    Stripe_Customer__c customer = StripeTestDataFactory.createStripeCustomer();
+    TriggerBypass.bypassStripeCustomer = true;
+    customer.Stripe_Customer_ID__c = 'cus_123456';
+    insert customer;
+    TriggerBypass.bypassStripeCustomer = false;
+
+    // Set Mock
+    StripeMockHttpResponse mockResponse = StripeMockHttpResponse.createErrorCustomerResponse();
+    Test.setMock(HttpCalloutMock.class, mockResponse);
+
+    Test.startTest();
+    try {
+      customer.Email__c = 'invalid-email';
+      update customer;
+    } catch (Exception e) {
+      exceptionThrown = true;
+    }
+    Test.stopTest();
+
+    // Assertions to verify error response
+    Assert.isTrue(
+      exceptionThrown,
+      'Exception should be thrown for invalid email'
+    );
+    Assert.areEqual(mockResponse.statusCode, 400, 'Status code should be 400');
+    Assert.areEqual(
+      mockResponse.status,
+      'Bad Request',
+      'Response status should be Bad Request'
+    );
+  }
 }
